--- a/index.html
+++ b/index.html
@@ -27,36 +27,24 @@
     </header>
 
     <main>
-        <h1>Título principal</h1>
         <section>
-            <article>
-                <h2>Arte</h2>
-                <img src="" alt=""/>
-                <p></p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h2>Deportes</h2>
-                <img src="" alt=""/>
-                <p></p>
-            </article>
-        </section>
-    </main>
-    <div>
-        <section>
-            <article>
-                <h2>Tecnología</h2>
-                <img src="" alt=""/>
-                <p></p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h2>Cualquier cosa</h2>
-                <img src="" alt=""/>
-                <p></p>
-            </article>
+            <article class="publish">
+                <h3>Publish to your blog in minutes, not hours.</h3>
+                <p>
+                  Your blog is your most powerful asset to build, engage, and retain a loyal
+                  audience. But you don’t have hours to create content that may or may not
+                  work. With Matcha, instantly publish from our library of 10,000+
+                  professionally written articles and build your email list faster with our
+                  powerful conversion tool.
+                </p>
+                <form>
+                  <p>Start publishing today:</p>
+                  <div>
+                    <input type="text" placeholder="Enter email" />
+                    <button>Start My Trial</button>
+                  </div>
+                </form>
+              </article>
         </section>
     </div>
     <aside>
