añadir seccion de publicidad

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main>
         <section>
-            <article class="publish">
+            <article class="publicity">
                 <h3>Publish to your blog in minutes, not hours.</h3>
                 <p>
                   Your blog is your most powerful asset to build, engage, and retain a loyal
